--- a/ESR/lit_review.tex
+++ b/ESR/lit_review.tex
@@ -8,6 +8,8 @@ The first approach introduces probability measures to ODE solvers by representin
 
 The second approach \textcolor{blue}{\citep{schober2014probabilistic,kersting2016active,magnani2017bayesian,schober2019probabilistic,tronarp2019probabilistic,kersting2018convergence}} recasts IVPs as \textbf{stochastic filtering problems}. This method involves assuming \textit{a priori} that the solution of the IVP and a prespecified number of its derivatives follow a Gauss-Markov process that solves a particular stochastic differential equation (SDE). The evaluations of the vector field of the IVP at numerical estimates of the true solution are then regarded as imperfect evaluations of the time derivative of the solution and are thus used as a Bayesian update for the Gauss-Markov process. This approach gives an algorithm very similar in structure to that of the Kalman filter.
 
+More recently another approach has been taken in the PN community towards ODEs. In \textcolor{blue}{\citep{wang2018role}} the authors introduce a novel Bayesian PNM for solving a limited class of ODEs. This method involves the use of a combination of classical Lie group methods, to exploit underlying symmetries in the gradient field of the ODE, and non-parametric regression in a transformed solution space for the ODE. This method provides a positive answer to the question of whether there exist true exact Bayesian PNM as defined in \textcolor{blue}{\citep{cockayne2019bayesian}}. Such a Bayesian approach to PNM holds several advantages. For a discussion of the benefits one should consult the above two references.
+
 There are some existing numerical methods for dealing with stochastic PDEs. In chapter 9 of ``An Introduction to Computational Stochastic PDEs" \textcolor{blue}{\citep{lord2014introduction}} the authors analyse several different methods for dealing with elliptic PDEs with random data. In particular the following (random) elliptic boundary-value problem (BVP) on a domain $D\subset\mathbb{R}^d$ is considered:
 \begin{align*}
 -\nabla \cdot(a(x) \nabla u(x)) &=f(x), \hspace{0.25cm} \forall x \in D \\
@@ -19,9 +21,9 @@ The FEM is then combined with the Monte Carlo method to yield what the authors c
 Following this a variational formulation on $D\times\Omega$ is instead considered, where $\Omega$ is the underlying sample space for the probability space where the random fields live. The associated weak form is not a convenient starting point for Galerkin approximation as it involves taking expectations with respect to the abstract set $\Omega$ and the associated probability measure.
 This leads the authors to instead consider that the noise arises from a finite number of random-variables (i.e. the random fields are so called \textit{finite-dimensional noise}). Doing so yields an equivalent weak form on $D\times\Gamma$ where $\Gamma$ is the range of the finite-dimensional noise. Having done this a Stochastic Galerkin FEM is developed to approximate the solution to this new weak form. Both a semi-discrete and fully-discrete version are considered (discretization can now occur in two spaces). After analysing this method the authors finally consider a stochastic collocation FEM which combines collocation on the range of the finite-dimensional noise and FEM approximations on $D$.
 
-It should be pointed out that these methods are quite computationally expensive and become infeasible when the dimension (of both the deterministic and random spaces) increases past 4. Some work has been done on sparse deterministic-stochastic tensor Galerkin finite element methods (sparse sGFEMS) \textcolor{blue}{\citep{bieri2010sparse}} \textbf{CHANGE REFERENCE!!!!!}. This method aims to reduce computational complexity by using hierarchic sequences of finite-dimensional approximation spaces to yield sparse tensor product spaces. In Section \textcolor{blue}{\ref{elliptic_bv_prob}} we will consider a particular example of such a random elliptic BVP and introduce an alternative probabilistic numerical method to tackle this.
+It should be pointed out that these methods are quite computationally expensive and become infeasible when the dimension (of both the deterministic and random spaces) increases past 4. Some work has been done on sparse deterministic-stochastic tensor Galerkin finite element methods (sparse sGFEMS) \textcolor{blue}{\citep{bieri2010sparse}}. This method aims to reduce computational complexity by using hierarchic sequences of finite-dimensional approximation spaces to yield sparse tensor product spaces. Sparse tensor discretizations of high-dimensional parametric and stochastic PDEs have also been considered in \textcolor{blue}{\citep{schwab2011sparse}}. Here the authors consider tensorized operator equations for spatial and temporal $k$-point correlation functions of the random solutions to sPDEs. Sparse tensor products of hierarchical (multi-level) discretizations in physical space and time are shown here to converge at rates independent of the dimension of the parameter space. This paper also presents a convergence analysis of multi-level Monte Carlo discretizations of PDEs with random coefficients.
 
-\textbf{Add more on PDE methods!!!} Probabilistic numerical methods for PDEs are more uncommon. However, some methods do exist which we now briefly outline. In \textcolor{blue}{\citep{cockayne2016probabilistic}} a probabilistic numerical method to solve the strong formulation of a PDE (as opposed to the weak form considered in \textcolor{blue}{\citep{conrad2017statistical}}) is proposed. This method begins with a prior distribution over the solution space of the PDE which is then restricted to a subset of the solution space by utilising information about the true solution of the PDE. This can be viewed as imposing the governing equations of the PDE at a finite number of locations in the domain of interest. The choice of where to impose the equations is what constitutes the discretization of the PDE and this restriction yields the posterior distribution on the solution.
+Probabilistic numerical methods for PDEs are more uncommon. However, some methods do exist which we now briefly outline. \textcolor{blue}{\citep{conrad2017statistical}} includes some discussion of how to randomise FEM basis functions in a similar spirit to how they randomise the numerical flow map for ODE solvers, while in \textcolor{blue}{\citep{cockayne2016probabilistic}} a probabilistic numerical method to solve the strong formulation of a PDE (as opposed to the weak form considered in \textcolor{blue}{\citep{conrad2017statistical}}) is proposed. This method begins with a prior distribution over the solution space of the PDE which is then restricted to a subset of the solution space by utilising information about the true solution of the PDE. This can be viewed as imposing the governing equations of the PDE at a finite number of locations in the domain of interest. The choice of where to impose the equations is what constitutes the discretization of the PDE and this restriction yields the posterior distribution on the solution. Another approach is taken in \textcolor{blue}{\citep{chkrebtii2016bayesian}} where the authors deal with parabolic PDEs in a similar manner to how they deal with ODEs. In particular, they define a probability measure over multivariate tragectories, as well as on derivatives with respect to spatial inputs to model prior belief about the unknown solution and partial derivatives of the parabolic boundary value problem. Then a similar updating scheme is used which correpsonds to a generalisation of the procedure the authors take for ODEs.
 
 We now give a brief account of additional background material necessary for this project. In particular, it was necessary to learn about methods to approximate solutions of partial differential equations, specifically parabolic and elliptic PDEs. We focused on Finite Element based approaches and sought to find a Bayesian formulation of the conditions which give rise to FEM approximations. As such a proper understanding of Finite Element Methods was necessary; the two main references we consulted for this were \textcolor{blue}{\citep{lord2014introduction}} and \textcolor{blue}{\citep{larsson2008partial}}.
 
