--- a/ESR/references.bib
+++ b/ESR/references.bib
@@ -328,3 +328,32 @@
   year={1975},
   publisher={Cambridge University Press}
 }
+
+@article{schwab2011sparse,
+  title={Sparse tensor discretizations of high-dimensional parametric and stochastic PDEs},
+  author={Schwab, Christoph and Gittelson, Claude Jeffrey},
+  journal={Acta Numerica},
+  volume={20},
+  pages={291--467},
+  year={2011},
+  publisher={Cambridge University Press}
+}
+
+@article{wang2018role,
+  title={A Role for Symmetry in the Bayesian Solution of Differential Equations},
+  author={Wang, Junyang and Cockayne, Jon and Oates, Chris J and others},
+  journal={Bayesian Analysis},
+  year={2018},
+  publisher={International Society for Bayesian Analysis}
+}
+
+@article{cockayne2019bayesian,
+  title={Bayesian probabilistic numerical methods},
+  author={Cockayne, Jon and Oates, Chris J and Sullivan, Timothy John and Girolami, Mark},
+  journal={SIAM Review},
+  volume={61},
+  number={4},
+  pages={756--789},
+  year={2019},
+  publisher={SIAM}
+}
