added milestone requirements

--- a/ESR/main.tex
+++ b/ESR/main.tex
@@ -96,5 +96,31 @@
 
 \bibliography{references.bib}
 
+\section{Milestone Requirements}
+
+\noindent {\textbf{Postgraduate courses}}
+
+\noindent I have completed the following courses:
+\begin{itemize}
+    \item Function Spaces and Applications (Imperial Course: MATH97102, 30 hours)
+    \item Advanced Topics in Partial Differential Equations (Imperial Course: MATH97103, 30 hours)
+\end{itemize}
+
+\noindent {\textbf{Professional development skills courses}}
+
+I have completed two Graduate School Professional Skills course:
+\begin{itemize}
+    \item Research Computing: Introduction to C++ (27/05/2020-29/05/2020)
+    \item Research Computing: The Linux Command Line for Scientific Computing (10/06/2020-12/06/2020)
+\end{itemize}
+
+\noindent {\textbf{Plagiarism awareness course}}
+
+\noindent Completed as part of the MSc in Statistics at Imperial College London.
+
+\noindent {\textbf{Academic English requirement}}
+
+\noindent Exempted of the PhD Academic English Requirement on the basis of holding a Bachelor's degree from England as well as an MSc from England.
+
 % \bibliographystyle{unsrt}
 \end{document}
